--- a/pages/videos.html
+++ b/pages/videos.html
@@ -7,6 +7,7 @@
         <body>
             <h1>myssabelle</h1>
             <p>coming soon. (videos page)</p>
-            <a href="home.html">PRESS ME</a>
+            <a href="home.html">PRESS ME</a><br/><br/>
+            <iframe src="https://www.youtube.com/watch?v=IJ0jebid4Ew"></iframe>
         </body>
     </html>
