the video AUTOPLAYS

--- a/pages/videos.html
+++ b/pages/videos.html
@@ -2,12 +2,15 @@
     <html>
         <head>
             <title>Videos</title>
-            <link rel="stylesheet" href="../css/isdisright.css">
+            <link rel="stylesheet" href="../css/video.css">
         </head>
         <body>
             <h1>myssabelle</h1>
             <p>coming soon. (videos page)</p>
             <a href="home.html">PRESS ME</a><br/><br/>
-            <iframe src="https://www.youtube.com/watch?v=IJ0jebid4Ew"></iframe>
+            <h2>literature vlog</h2>
+            <embed src="../videos/Literature Vlog.mp4" width="1230" height= "690" autostart="false"/>
+            <h3>september vlog</h3>
+            <embed src="../videos/September Vlog.mp4" width="1230" height= "690" autostart="true"/>
         </body>
     </html>
