--- a/pages/videos.html
+++ b/pages/videos.html
@@ -9,8 +9,10 @@
             <p>coming soon. (videos page)</p>
             <a href="home.html">PRESS ME</a><br/><br/>
             <h2>literature vlog</h2>
-            <embed src="../videos/Literature Vlog.mp4" width="1230" height= "690" autostart="false"/>
+            <video src="../videos/Literature Vlog.mp4" width="1230" height= "690" autostart="false"/>
+             </video>
             <h3>september vlog</h3>
             <embed src="../videos/September Vlog.mp4" width="1230" height= "690" autostart="true"/>
+            what
         </body>
     </html>
