no more autoplay

--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,14 +5,20 @@
             <link rel="stylesheet" href="../css/video.css">
         </head>
         <body>
-            <h1>myssabelle</h1>
-            <p>coming soon. (videos page)</p>
-            <a href="home.html">PRESS ME</a><br/><br/>
-            <h2>literature vlog</h2>
-            <video src="../videos/Literature Vlog.mp4" width="1230" height= "690" autostart="false"/>
-             </video>
+            <div>
+                <h1>myssabelle</h1>
+                <p>coming soon. (videos page)</p>
+                <a href="#lit-vlog">PRESS ME</a>
+            </div>
+
+            <h2 id="lit-vlog">literature vlog</h2>
+            <video controls>
+                <source src="../videos/Literature Vlog.mp4" />
+            </video>
+
             <h3>september vlog</h3>
-            <embed src="../videos/September Vlog.mp4" width="1230" height= "690" autostart="true"/>
-            what
+            <video controls>
+                <source src="../videos/September Vlog.mp4" />
+            </video>
         </body>
     </html>
