--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
                 <p>a generation z with access to a camera and a laptop.</p>
             </div>
             <div class="icons">
-                <a href="home.html">
+                <a href="../index.html">
                     <img src="../images/home.svg" style="width:90px; height:90px" title="Home" alt="Home">
                 </a>
                 <a href="pictures.html">
