--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </head>
         <body>
             <h1>myssabelle</h1>
-            <p>coming soon.</p>
+            <p>alpha version.</p>
             <a href="pages/home.html">PRESS ME</a>
         </body>
     </html>
