--- a/pages/pictures.html
+++ b/pages/pictures.html
@@ -2,11 +2,12 @@
     <html>
         <head>
             <title>Pictures</title>
-            <link rel="stylesheet" href="../css/isdisright.css">
+            <link rel="stylesheet" href="../css/pictures.css">
         </head>
         <body>
             <h1>myssabelle</h1>
             <p>coming soon. (pictures page)</p>
             <a href="home.html">PRESS ME</a>
+            <img src ="../images/blogpics/1.jpg"/>
         </body>
     </html>
