--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>Blog</title>
-            <link rel="stylesheet" href="../css/isdisright.css">
+            <link rel="stylesheet" href="../css/blog.css">
         </head>
         <body>
             <h1>myssabelle</h1>
