--- a/pages/home.html
+++ b/pages/home.html
@@ -11,16 +11,16 @@
             </div>
             <div class="icons">
                 <a href="../index.html">
-                    <img src="../images/home.svg" style="width:90px; height:90px" title="Home" alt="Home">
+                    <img src="../images/icons/home.svg" style="width:90px; height:90px" title="Home" alt="Home">
                 </a>
                 <a href="pictures.html">
-                    <img src="../images/pictures.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                    <img src="../images/icons/pictures.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
                 </a><br />
                 <a href="videos.html">
-                    <img src="../images/videos.svg" style="width:90px; height:90px" title="Videos" alt="Videos">
+                    <img src="../images/icons/videos.svg" style="width:90px; height:90px" title="Videos" alt="Videos">
                 </a>
                 <a href="blog.html">
-                    <img src="../images/blog.svg" style="width:90px; height:90px" title="Blog" alt="Blog">
+                    <img src="../images/icons/blog.svg" style="width:90px; height:90px" title="Blog" alt="Blog">
                 </a>
             </div>
         </body>
