--- a/pages/videos.html
+++ b/pages/videos.html
@@ -8,7 +8,8 @@
             <div>
                 <h1>myssabelle</h1>
                 <p>coming soon. (videos page)</p>
-                <a href="#lit-vlog">PRESS ME</a>
+                <a href="#lit-vlog">PRESS ME FOR VIDEOS</a>
+                <a href="home.html">PRESS ME TO GO BACK</a>
             </div>
 
             <h2 id="lit-vlog">literature vlog</h2>
@@ -20,5 +21,20 @@
             <video controls>
                 <source src="../videos/September Vlog.mp4" />
             </video>
+
+            <div class="icons">
+                <a class="iconlink" href="../index.html">
+                    <img src="../images/icons/home_pink.svg" style="width:90px; height:90px" title="Home" alt="Home">
+                </a>
+                <a class="iconlink" href="pictures.html">
+                    <img src="../images/icons/pictures_pink.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="iconlink" href="videos.html">
+                    <img src="../images/icons/videos_pink.svg" style="width:90px; height:90px" title="Videos" alt="Videos">
+                </a>
+                <a class="iconlink" href="blog.html">
+                    <img src="../images/icons/blog_pink.svg" style="width:90px; height:90px" title="Blog" alt="Blog">
+                </a>
+            </div>
         </body>
     </html>
