--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,5 +8,7 @@
             <h1>myssabelle</h1>
             <p>coming soon. (blog page)</p>
             <a href="home.html">PRESS ME</a>
+            <a href="blog1.html">BLOG1</a>
+            <a href="blog2.html">BLOG2</a>
         </body>
     </html>
