--- a/pages/blog2.html
+++ b/pages/blog2.html
@@ -1,61 +1,81 @@
 <html>
     <head>
-        <title>Director's Cut Behind The Scenes</title>
-        <link rel="stylesheet" href="../css/blog1.css">
+        <title>Squad</title>
+        <link rel="stylesheet" href="../css/blog2.css">
     </head>
     <body>
         <div class="beginning">
             <h1>myssabelle</h1>
-            <p class ="title">Director's Cut</p>
+            <p class ="title">Beshy Squad</p>
             <a href="#desc">PRESS ME</a>
         </div>
 
         <div class ="des">
             <p id ="desc" class = "description1">
-                <br/> Director's Cut is a short film competition organized by my school. It's a nationwide competition, with submissions from all over the country, giving students a opportunity to not only showcase their skills and abilities but as well as 
-            </p>
+                <br/> This is going to sound like some stupid teenage story where her friends are literally everything and shit but sure, why not. Beshy squad is what my friends and I call our group. It consists of eight people: (1) Me, (2) Ella, (3) Pauline, (4) Jasper, (5) Alcrysel, (6) Ras, (7) Yolah, and (8) Xza. Recently, I have spent an inoridnate amount of time with these people. Resulting in either very cute pictures or very funny faces. Due to a massive project that I've somehow roped them into, we've spent the past three weeks with cameras and a tripod in tow, and these are just a few of my favorite *unedited* shots.
         </div>
 
-        <h2 "lit-vlog">literature vlog</h2>
-        <video controls>
-            <source src="../videos/Literature Vlog.mp4" />
-        </video>
+        <img src = "../images/blogpics/Blog2/1.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/2.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/3.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/4.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/5.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/6.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/7.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/8.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/9.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/10.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/11.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/12.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/13.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/14.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/15.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/16.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/17.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/18.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/19.JPG" class="set1">
+        <img src = "../images/blogpics/Blog2/20.JPG" class="set1">
 
-        <p id="desc" class="description2">
-            This next one is quite nostalgic for me. This was created purely by sheer will and curiosity. I took this as an opportunity to explore more on my hobbies and to experiment a little on what I liked about videos. Turns out I like <strong>this</strong>s type of videos. Montage type of videos that follows a certain beat. Beautiful way to appreciate both music and film. It's very shaky, somehow yssa does not know what a tripod is. I find it kind of cute as it gives clues that makes me remember a lot of things without actually putting it on camera. Whether it may be old crushes *wink wink*, my previous go-to bag, or just objects I found particularly interesting that month. It also shows the people that was around me at that particular time of life. (It's still the same people today.) This feels like a timecapsule, something that shows me a little bit of my past, whether it may be similar to what I have now or completely different. I filmed this with two other friends - Ella and Pau - which some shots got me into trouble (ELLA'S FAULT LOL) but it's all sorted out now. I love this so much. I don't know whether it's because of nostalgia, or it's because I look kinda happier and thinner lol. Hoping everything comes full circle soon.
+        <p class = "description2">
+            My favorite picture is definitely the last one. Kids aren't always my forte but this seemed like such a cute picture. That girl is Jasper's little sister - Jacobe. Now there are 20 pictures above this text, and although it seems like they are very candid pictures, it's been carefully chosen and filtered, among hundreds of other pictures. We aren't exactly the most photogenic in life. These are only the pictures we've taken in the past three weeks. THREE WEEKS. And we only got 20 good ones - this speaks a lot about us. *cue sad laugh* Now, these people have made me laugh more in the past 12 months than I have laughed in the past 2 years. They're the kind of people who eat your food, make jokes about mistakes, and laugh when you trip. But they're also the kind of people who will be with you every step of the way, and inspire you to be greater than you are. In normal circumstances, we would never be friends. They can find me sometimes a little snobbish, annoying, bossy, and many other things. And vice versa. But due to similar hate over the same person, we found ourselves hating together. I am grateful to be able to find these people and the very bad series of unfortunate events that led us together. Hopefully you find people like this as well.
         </p>
 
-        <h3>september vlog</h3>
-        <video controls>
-            <source src="../videos/September Vlog.mp4" />
-        </video>
+        <div class = "second">
+        <img src = "../images/blogpics/Blog2/21.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/22.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/23.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/24.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/25.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/26.JPG" class= "set2";>
+        <img src = "../images/blogpics/Blog2/27.JPG" class= "set2";>
+        </div>
 
-        <p id="des" class = "description3">
-            These videos will be up in the videos section of my website, along with any other videos that I will upload in the future in any upcoming vlogs.
+        <div class="icons">
+            <a class="iconlink" href="../index.html">
+                <img src="../images/icons/home_pink.svg" style="width:100px; height:100px" title="Home" alt="Home">
+            </a>
+            <a class="iconlink" href="pictures.html">
+                <img src="../images/icons/pictures_pink.svg" style="width:100px; height:100px" title="Pictures" alt="Pictures">
+            </a>
+            <a class="iconlink" href="videos.html">
+                <img src="../images/icons/videos_pink.svg" style="width:100px; height:100px" title="Videos" alt="Videos">
+            </a>
+            <a class="iconlink" href="blog.html">
+                <img src="../images/icons/blog_pink.svg" style="width:100px; height:100px" title="Blog" alt="Blog">
+            </a>
+        </div>
 
-            These are a few of the pictures that I loved, whether taken by me or of my two associates. (The time where I did not know how to edit camera settings, woops) All of them can be found on my facebook page, in the album 1st sem. (It's public)
-        </p>
-
-        <img src = "../images/blogpics/Blog1/1V.JPG">
-        <img src = "../images/blogpics/Blog1/2V.JPG">
-        <img src = "../images/blogpics/Blog1/3V.JPG">
-        <img src = "../images/blogpics/Blog1/4V.JPG">
-        <img src = "../images/blogpics/Blog1/5V.JPG">
-        <img src = "../images/blogpics/Blog1/1H.JPG">
-        <img src = "../images/blogpics/Blog1/2H.JPG">
-        <img src = "../images/blogpics/Blog1/3H.JPG">
-        <img src = "../images/blogpics/Blog1/4H.JPG">
-        <img src = "../images/blogpics/Blog1/5H.JPG">
-        <img src = "../images/blogpics/Blog1/6H.JPG">
-        <img src = "../images/blogpics/Blog1/7H.JPG">
-        <img src = "../images/blogpics/Blog1/8H.JPG">
-        <img src = "../images/blogpics/Blog1/9H.JPG">
-        <img src = "../images/blogpics/Blog1/10H.JPG">
-        <img src = "../images/blogpics/Blog1/11H.JPG">
-        <img src = "../images/blogpics/Blog1/12H.JPG">
-        <img src = "../images/blogpics/Blog1/13H.JPG">
-        <img src = "../images/blogpics/Blog1/14H.JPG">
-        <img src = "../images/blogpics/Blog1/15H.JPG">
+        <div class ="socialmedia">
+            <a class="smedialink" href="https://twitter.com/mryyssabelle">
+                <img src="../images/icons/twitter.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+            </a>
+            <a class="smedialink" href="https://github.com/myssabelle">
+                <img src="../images/icons/github.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+            </a>
+            <a class="smedialink" href="https://www.facebook.com/aizahbel">
+                <img src="../images/icons/fb.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+            </a>
+        </div>
 
     </body>
 </html>
