--- a/pages/videos.html
+++ b/pages/videos.html
@@ -8,8 +8,7 @@
             <div>
                 <h1>myssabelle</h1>
                 <p>coming soon. (videos page)</p>
-                <a href="#lit-vlog">PRESS ME FOR VIDEOS</a>
-                <a href="home.html">PRESS ME TO GO BACK</a>
+                <a href="#lit-vlog">PRESS ME</a>
             </div>
 
             <h2 id="lit-vlog">literature vlog</h2>
@@ -27,15 +26,27 @@
                     <img src="../images/icons/home_pink.svg" style="width:100px; height:100px" title="Home" alt="Home">
                 </a>
                 <a class="iconlink" href="pictures.html">
-                    <img src="../images/icons/pictures_pink.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                    <img src="../images/icons/pictures_pink.svg" style="width:100px; height:100px" title="Pictures" alt="Pictures">
                 </a>
                 <a class="iconlink" href="videos.html">
-                    <img src="../images/icons/videos_pink.svg" style="width:120px; height:120px" title="Videos" alt="Videos">
+                    <img src="../images/icons/videos_pink.svg" style="width:100px; height:100px" title="Videos" alt="Videos">
                 </a>
                 <a class="iconlink" href="blog.html">
-                    <img src="../images/icons/blog_pink.svg" style="width:120px; height:120px" title="Blog" alt="Blog">
+                    <img src="../images/icons/blog_pink.svg" style="width:100px; height:100px" title="Blog" alt="Blog">
                 </a>
             </div>
-            
+
+            <div class ="socialmedia">
+                <a class="smedialink" href="https://twitter.com/mryyssabelle">
+                    <img src="../images/icons/twitter.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://github.com/myssabelle">
+                    <img src="../images/icons/github.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://www.facebook.com/aizahbel">
+                    <img src="../images/icons/fb.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+            </div>
+
         </body>
     </html>
