--- a/pages/videos.html
+++ b/pages/videos.html
@@ -7,7 +7,7 @@
         <body>
             <div>
                 <h1>myssabelle</h1>
-                <p>coming soon. (videos page)</p>
+                <p>VIDEOS</p>
                 <a href="#lit-vlog">PRESS ME</a>
             </div>
 
@@ -20,6 +20,10 @@
             <video controls>
                 <source src="../videos/September Vlog.mp4" />
             </video>
+
+            <p>
+                more coming soon.
+            </p>
 
             <div class="icons">
                 <a class="iconlink" href="../index.html">
