--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,9 +6,36 @@
         </head>
         <body>
             <h1>myssabelle</h1>
-            <p>coming soon. (blog page)</p>
-            <a href="home.html">PRESS ME</a>
-            <a href="blog1.html">BLOG1</a>
-            <a href="blog2.html">BLOG2</a>
+            <p>ARCHIVE</p>
+            <a href="blog1.html" class="firstblog">story behind the camera</a>
+            <a href="blog2.html" class="secondblog"> beshy squad</a>
+
+            <div class="icons">
+                <a class="iconlink" href="../index.html">
+                    <img src="../images/icons/home_pink.svg" style="width:100px; height:100px" title="Home" alt="Home">
+                </a>
+                <a class="iconlink" href="pictures.html">
+                    <img src="../images/icons/pictures_pink.svg" style="width:100px; height:100px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="iconlink" href="videos.html">
+                    <img src="../images/icons/videos_pink.svg" style="width:100px; height:100px" title="Videos" alt="Videos">
+                </a>
+                <a class="iconlink" href="blog.html">
+                    <img src="../images/icons/blog_pink.svg" style="width:100px; height:100px" title="Blog" alt="Blog">
+                </a>
+            </div>
+
+            <div class ="socialmedia">
+                <a class="smedialink" href="https://twitter.com/mryyssabelle">
+                    <img src="../images/icons/twitter.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://github.com/myssabelle">
+                    <img src="../images/icons/github.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://www.facebook.com/aizahbel">
+                    <img src="../images/icons/fb.svg" style="width:90px; height:90px" title="Pictures" alt="Pictures">
+                </a>
+            </div>
+
         </body>
     </html>
