--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>myssabelle</h1>
-        <p>Hi! I'm Mary Yssabelle Hermosa, a 12th-grader with a passion for both the sciences and the art, thus this website! It has four main components - home, pictures, videos and blog. Home will take you here. Pictures are all the pictures that is currently uploaded on my blog. Videos, like pictures, contains all the videos that is currently on my blog. And of course, the blog! The blog button will lead you to my archive. Hover your mouse along the bottom of the window to open teh navigation panel.</p>
+        <p>Hi! I'm Mary Yssabelle Hermosa, a 12th-grader with a passion for both the sciences and the art, thus this website! It has four main components - home, pictures, videos and blog. Home will take you here. Pictures are all the pictures that is currently uploaded on my blog. Videos, like pictures, contains all the videos that is currently on my blog. And of course, the blog! The blog button will lead you to my archive. Hover your mouse along the bottom of the window to open the navigation panel.</p>
         <a href="pages/home.html">PRESS ME</a>
     </body>
 </html>
