--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Coming Soon</title>
+        <title>Home</title>
         <link rel="stylesheet" href="css/isdisright.css">
     </head>
     <body>
