--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,6 +9,7 @@
             <p>ARCHIVE</p>
             <a href="blog1.html" class="firstblog">story behind the camera</a>
             <a href="blog2.html" class="secondblog"> beshy squad</a>
+            <a href="blog3.html" class="thirdblog"> VIGAN</a>
 
             <div class="icons">
                 <a class="iconlink" href="../index.html">
